tests/neg/i9168.scala
//> using options -Xfatal-warnings

def g: Int = try 42 finally ; // error
